# customer-service-agent-backend

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
app/: cli.py  main.py
app/agents/: runner.py
app/api/: chat.py
app/auth/: jwt.py
app/config/: logging_config.py  settings.py
app/llm/: glm.py  provider.py  qwen.py
app/memory/: store.py
app/models/: db.py  schemas.py
app/prompts/: templates.py
app/rag/: milvus_store.py
app/tools/: mall_client.py  mall_db.py  registry.py  utils.py
app/workflows/: graph.py
sql/: mall_agent.sql
tests/: conftest.py
tests/integration/: test_graph_agents.py
tests/unit/: test_agent_routing.py  test_auth_header.py  test_rag_routing.py  test_runner.py  test_supervisor_plan.py  test_tool_call_parser.py  test_utils.py
