[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "customer-service-agent"
version = "1.0.0"
description = "企业级 AI Agent 电商客服系统"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "mall" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.12",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "zhipuai>=2.1.0",
    "openai>=1.0.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "redis>=5.0.0",
    "pymilvus>=2.4.0",
    "sentence-transformers>=3.0.0",
    "pyjwt>=2.8.0,<2.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.scripts]
cs-agent = "app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app", "run.py", "sql", "README.md", ".env.example"]
